@@ -120,7 +120,8 @@ export(measure.dynamics.id, measure.dynamics.idage, measure.dynamics.d.d,
        measure.dynamics.citingcat.citedcat)
 
 export(evolver.d, evolver.ad, evolver.ade, evolver.e, evolver.de, evolver.l,
-       evolver.dl, evolver.el, evolver.r, evolver.ar, evolver.di, evolver.adi)
+       evolver.dl, evolver.el, evolver.r, evolver.ar, evolver.di, evolver.adi,
+       evolver.il)
 
 # isomorphism, motifs
 
